fixed overflow on main container

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -4,3 +4,8 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.mainContainer {
+  height: 100%;
+  overflow: scroll;
+}
