--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,11 +13,11 @@ div#__next > div {
   width: 100%;
 }
 
-div#__next > div {
+/* div#__next > div {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
+} */
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
